--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "nextjs_inversify",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+	"name": "nextjs_awilix_request_scope",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "nodemon",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"awilix": "^10.0.2",
+		"next": "14.2.5",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.14.10",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.2.5",
+		"nodemon": "^3.1.4",
+		"postcss": "^8.4.39",
+		"tailwindcss": "^3.4.4",
+		"tsx": "^4.16.2",
+		"typescript": "^5.5.3"
+	}
 }
