--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "nodemon",
 		"build": "next build",
-		"start": "next start",
+		"start": "NODE_ENV=production tsx --tsconfig tsconfig.json server/server.ts",
 		"lint": "next lint"
 	},
 	"dependencies": {
